<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="20dp" android:layout_marginTop="40dp" android:text="@string/ridein_welcome"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/editText1" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_marginLeft="34dp" android:layout_marginTop="60dp" android:layout_width="match_parent" android:hint="@string/operator">
        <requestFocus></requestFocus>
    </EditText>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button1" android:layout_below="@+id/textView1" android:layout_alignParentRight="true" android:text="Search"></Button>
    <EditText android:layout_height="wrap_content" android:id="@+id/editText2" android:layout_below="@+id/editText1" android:layout_alignLeft="@+id/editText1" android:layout_width="match_parent" android:hint="@string/plate_number"></EditText>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button2" android:layout_below="@+id/editText2" android:layout_centerHorizontal="true" android:layout_marginTop="94dp" android:text="Ride In"></Button>
    
</RelativeLayout>
